Refactor CStructOrUnion: Represent members using interface